@@ -174,8 +174,7 @@ public class CommonsHTTPSender extends BasicHandler {
       //  HttpProtocolParams.setVersion(method.getParams(),new ProtocolVersion("HTTP",1,0));
 
       BackgroundHTTPThread methodThread = new BackgroundHTTPThread(httpClient,method);
-      Thread vThread = new Thread(methodThread, "HTTP request");
-      vThread.start();
+      Thread vThread = Thread.ofVirtual().name("HTTP request").start(methodThread);
       try
       {
         int returnCode = methodThread.getResponseCode();
